2015-07-20  Titus Brown  <titus@idyll.org>

   * scripts/interleave-reads.py: force exactly two input files.
   * scripts/test_scripts.py: remove test_interleave_reads_broken_fq_4 for
   only one input file for interleave-reads.py.
   * scripts/split-paired-reads.py: fix print statement; clarify output.

2015-07-20  Titus Brown  <titus@idyll.org>

   * khmer/__init__.py: cleaned up FP rate reporting.
   * scripts/normalize-by-median.py: corrected epilog; refactored reporting
   to be a bit cleaner; use CSV for reporting file;
   added --report-frequency arg.
   * tests/test_normalize_by_median.py: updated/added tests for reporting.

2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/{functions,build_graph}.py,scripts/{load-graph,normalize-by-median,
   abundance-dist}.py,tests/test_{normalize_by_median,subset_graph,hashbits,
   oxli_function}.py: pylint cleanup

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>  

   * Makefile, tests/test_read_aligner.py: import khmer when pylinting

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * lib/read_parser.{cc,hh}: use std::string everywhere to match existing
   exceptions

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: changed check_valid_file_exists to recognize fifos as
   non-empty
   * tests/test_normalize_by_median.py: added test

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: changed estimate functions to use correct letter
   abbreviations
   * sandbox/estimate_optimal_hash.py: changed to use renamed estimate 
   functions
   * sandbox/unique-kmers.py: changed to not output recommended HT args by
   default
   * tests/test_oxli_functions.py: changed to use renamed estimate functions

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: added '--force' check to sanity check

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/functions.py: moved optimization/sanity check func to oxli