@@ -25,7 +25,7 @@ def check_input_files(file_path, force):
     """
     mode = None
 
-    if file_path == '-':
+    if file_path == '-' or file_path == '/dev/stdin':
         return
     try:
         mode = os.stat(file_path).st_mode
@@ -148,6 +148,8 @@ def check_valid_file_exists(in_files):
     or non-existent.
     """
     for in_file in in_files:
+        if in_file == '-' or in_file == '/dev/stdin':
+            continue
         if os.path.exists(in_file):
             mode = os.stat(in_file).st_mode
             if os.stat(in_file).st_size > 0 or S_ISBLK(mode) or S_ISFIFO(mode):
