@@ -108,6 +108,10 @@ def main():
         output_filename = output_file.name
     else:
         filename = args.filenames[0]
+        if filename == '/dev/stdin' or filename == '-':
+            print("Accepting input from stdin; output filename must "
+                  "be provided with '-o'.", file=sys.stderr)
+            sys.exit(1)
         output_filename = os.path.basename(filename) + '.subset'
 
     if num_samples == 1:
